--- a/hood.cabal
+++ b/hood.cabal
@@ -17,3 +17,7 @@ Library
   Build-Depends: base >= 4 && < 5, array
   Exposed-modules:
       Debug.Hood.Observe
+
+source-repository head
+    type:     git
+    location: git://github.com/ku-fpg/hood.git
