--- a/hood.cabal
+++ b/hood.cabal
@@ -9,9 +9,11 @@ Author:              Andy Gill
 Maintainer:          Andy Gill <andygill@ku.edu>
 Copyright:           (c) 2000 Andy Gill, (c) 2010-2015 University of Kansas
 Homepage:            http://www.ittc.ku.edu/csdl/fpg/Hood
-Stability:	         alpha
-build-type: 	     Simple
+bug-reports:         https://github.com/ku-fpg/hood/issues
+Stability:           alpha
+build-type:          Simple
 Cabal-Version:       >= 1.6
+extra-source-files:  CHANGELOG.md, README.md
 
 Library
   Build-Depends: base >= 4 && < 5, array
@@ -20,4 +22,4 @@ Library
 
 source-repository head
     type:     git
-    location: git://github.com/ku-fpg/hood.git
+    location: https://github.com/ku-fpg/hood
