--- a/hood.cabal
+++ b/hood.cabal
@@ -1,5 +1,5 @@
 Name:                hood
-Version:             0.2.1
+Version:             0.2.2
 Synopsis:            Debugging by observing in place
 Description:         Hood debugger, based on the idea of observing functions and structures as they are evaluated.
 Category:            Debug, Trace
@@ -7,7 +7,7 @@ License:             BSD3
 License-file:        LICENSE
 Author:              Andy Gill
 Maintainer:          Andy Gill <andygill@ku.edu>
-Copyright:           (c) 2000 Andy Gill, (c) 2010-2015 University of Kansas
+Copyright:           (c) 2000 Andy Gill, (c) 2010-2015 University of Kansas, (c) 2013-2015 Maarten Faddegon
 Homepage:            http://www.ittc.ku.edu/csdl/fpg/Hood
 bug-reports:         https://github.com/ku-fpg/hood/issues
 Stability:           alpha
