--- a/hood.cabal
+++ b/hood.cabal
@@ -1,5 +1,5 @@
 Name:                hood
-Version:             0.2.3
+Version:             0.3
 Synopsis:            Debugging by observing in place
 Description:         Hood debugger, based on the idea of observing functions and structures as they are evaluated.
 Category:            Debug, Trace
@@ -13,10 +13,14 @@ bug-reports:         https://github.com/ku-fpg/hood/issues
 Stability:           alpha
 build-type:          Simple
 Cabal-Version:       >= 1.8
+tested-with:         GHC == 7.4.2
+                   , GHC == 7.6.3
+                   , GHC == 7.8.4
+                   , GHC == 7.10.3
 extra-source-files:  CHANGELOG.md, README.md
 
 Library
-  Build-Depends: base >= 4 && < 5, array, FPretty
+  Build-Depends: base >= 4.5 && < 5, array, FPretty, ghc-prim
   Exposed-modules:
       Debug.Hood.Observe
 
