--- a/hood.cabal
+++ b/hood.cabal
@@ -8,7 +8,7 @@ License-file:        LICENSE
 Author:              Andy Gill
 Maintainer:          Andy Gill <andygill@ku.edu>
 Copyright:           (c) 2000 Andy Gill, (c) 2010-2015 University of Kansas, (c) 2013-2015 Maarten Faddegon
-Homepage:            http://www.ittc.ku.edu/csdl/fpg/Hood
+Homepage:            http://ku-fpg.github.io/software/hood
 bug-reports:         https://github.com/ku-fpg/hood/issues
 Stability:           alpha
 build-type:          Simple
