--- a/hood.cabal
+++ b/hood.cabal
@@ -25,6 +25,12 @@ Library
   Exposed-modules:
       Debug.Hood.Observe
 
+Test-Suite hood-test
+  Type:                exitcode-stdio-1.0
+  Hs-Source-Dirs:      test
+  Main-Is:             test.hs
+  Build-Depends:       base, hood
+
 source-repository head
     type:     git
     location: https://github.com/ku-fpg/hood
