--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 dist
+dist-*
 cabal-dev
 *.o
 *.hi
@@ -13,6 +14,9 @@ cabal.sandbox.config
 *.prof
 *.aux
 *.hp
-*~
-
+*.eventlog
 .stack-work/
+cabal.project.local
+cabal.project.local~
+.HTF/
+.ghc.environment.*
