--- a/hood.cabal
+++ b/hood.cabal
@@ -19,6 +19,7 @@ tested-with:         GHC == 7.4.2
                    , GHC == 7.10.3
                    , GHC == 8.0.2
                    , GHC == 8.2.2
+                   , GHC == 8.4.1
 extra-source-files:  CHANGELOG.md, README.md
 
 Library
